Add colors and variables for styles

--- a/angular.json
+++ b/angular.json
@@ -4,6 +4,7 @@
   "projects": {
     "news": "apps/news",
     "news-e2e": "apps/news-e2e",
+    "news-styles": "libs/news-styles",
     "pages": "libs/pages",
     "shared-ui": "libs/shared-ui"
   }
